# retrievit

./: LICENSE  README.md  pyproject.toml  tokenizer.py  train.py  visualize_embeddings.py
configs/model/: hybrid_1M1T_state16.json  hybrid_1Mamba21T_state16.json  hybrid_2M1T_state16.json  hybrid_2Mamba21T_state16.json  hybrid_3M1T_state16.json  hybrid_3Mamba21T_state16.json  hybrid_4M1T_state16.json  hybrid_4Mamba21T_state16.json  hybrid_par_mamba2_state16.json  hybrid_par_mamba2_state16_reverse.json  hybrid_par_state16.json  hybrid_par_state16_reverse.json  hybrid_parcorrector_state16.json  mamba2_state16.json  mamba2_state32.json  mamba2_state64.json  mamba_state128.json  mamba_state16.json  mamba_state256.json  mamba_state32.json  mamba_state64.json  transformer_no_flashattn.json  transformer_nope.json
scripts/: train_hybrid_par_ngram.sh  train_hybrid_par_ngram_test_duplicate.sh  train_hybrid_par_ngram_test_extrapolation.sh  train_hybrid_par_position.sh  train_hybrid_seq_ngram.sh  train_hybrid_seq_ngram_test_duplicate.sh  train_hybrid_seq_ngram_test_extrapolation.sh  train_hybrid_seq_position.sh  train_mamba_ngram_test_duplicate.sh  train_mamba_ngram_test_extrapolation.sh  train_mamba_position.sh  train_transformer_ngram.sh  train_transformer_ngram_test_duplicate.sh  train_transformer_ngram_test_extrapolation.sh  train_transformer_position.sh  train_transformernope_ngram.sh  train_transformernope_ngram_test_duplicate.sh  train_transformernope_ngram_test_extrapolation.sh  train_transformernope_position.sh
src/retrievit/callbacks/: callbacks.py
src/retrievit/datamodels/: __init__.py  datamodels.py
src/retrievit/datasets/: collate.py
src/retrievit/models/: hybrid_par.py  hybrid_seq.py  mamba.py  transformer.py  transformer_nope.py
src/retrievit/trainer/: __init__.py  evaluator.py  trainer.py
src/retrievit/utils/: compute_ngrams.py  count_model_parameters.py  huggingface.py  io.py
